--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="game-modal">
         <div class="content">
             <img src="#" alt="gif">
-            <h4>Game Over!</h4>
-            <p>The correct word was: <b>rainbow</b></p>
-            <button class="play-again">Play Again</button>
+            <h4>Thua Roi!</h4>
+            <p>Dap An: <b>rainbow</b></p>
+            <button class="play-again">Choi Lai</button>
         </div>
     </div>
     <div class="container">
